crates/internal/brink-syntax/src/parser/tests/expression/snapshots/brink_syntax__parser__tests__expression__insta_struct_literal.snap
---
source: crates/internal/brink-syntax/src/parser/tests/expression/mod.rs
expression: "format!(\"{:#?}\", p.syntax())"
---
SOURCE_FILE@0..29
  LOGIC_LINE@0..29
    TILDE@0..1 "~"
    WHITESPACE@1..2 " "
    ASSIGNMENT@2..28
      PATH@2..3
        IDENT@2..3 "p"
      WHITESPACE@3..4 " "
      EQ@4..5 "="
      WHITESPACE@5..6 " "
      STRUCT_LITERAL@6..28
        IDENTIFIER@6..11
          IDENT@6..11 "Point"
        HASH@11..12 "#"
        L_BRACE@12..13 "{"
        STRUCT_FIELD_INIT@13..19
          IDENTIFIER@13..14
            IDENT@13..14 "x"
          COLON@14..15 ":"
          WHITESPACE@15..16 " "
          FLOAT_LIT@16..19
            FLOAT@16..19 "1.0"
        COMMA@19..20 ","
        WHITESPACE@20..21 " "
        STRUCT_FIELD_INIT@21..27
          IDENTIFIER@21..22
            IDENT@21..22 "y"
          COLON@22..23 ":"
          WHITESPACE@23..24 " "
          FLOAT_LIT@24..27
            FLOAT@24..27 "2.0"
        R_BRACE@27..28 "}"
    NEWLINE@28..29 "\n"
